updated image sizes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <section class="top-section">
       <div class="top-img-container">
-        <img src="./face-sculpture-main.png" alt="main picture of candle holder in a shape of human face"
+        <img src="./main pictures/face-sculpture-main.png" alt="main picture of candle holder in a shape of human face"
           class="top-img" />
       </div>
     </section>
@@ -58,7 +58,8 @@
     <section id="about">
       <h1>ABOUT ME</h1>
       <div class="biography">
-        <img src="./painting-logo.png" alt="a colorful autoportrait of Klaudia Kazmierczak" class="profile-picture" />
+        <img src="./main pictures/painting-logo.png" alt="a colorful autoportrait of Klaudia Kazmierczak"
+          class="profile-picture" />
         <h3>Biography</h3>
         <p>
           Hello and welcome to my world!
@@ -74,7 +75,7 @@
         </p>
       </div>
       <div class="my-work">
-        <img src="./my-work-pic.jpg" alt="" class="profile-picture" />
+        <img src="./main pictures/my-work-pic.jpeg" alt="" class="profile-picture" />
         <h3>My Work</h3>
         <p>
           Here you can see a beginning of a way in to my mind. It is a colorful world of organic forms in different
