--- a/projects.html
+++ b/projects.html
@@ -35,11 +35,11 @@
           <p>click to see more sculptures</p>
         </a>
 
-        <a href="./tableware.html"><img src="./table-ware-logo.jpg"
+        <a href="./tableware.html"><img src="./main pictures/table-ware-logo.jpeg"
             alt="picture of coffe being poured into a ceramic coffee set" class="table-ware" />
           <p>click to see more tableware</p>
         </a>
-        <a href="./paintings.html"><img src="./painting-logo.png" alt="a colorful autoportrait of Klaudia"
+        <a href="./paintings.html"><img src="./main pictures/painting-logo.png" alt="a colorful autoportrait of Klaudia"
             class="paintings" />
           <p>click to see more paintings</p>
         </a>
