--- a/other.html
+++ b/other.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="other-gallery">
-            <figure class="hover-img"><img class="item" src="./others gallery/face-hangers.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers.jpg"
                     alt="multiple coat hangers in shapes of faces merged with elephant noses in different colours">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -37,7 +37,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/face-hangers-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hangers-2.jpg"
                     alt="multiple coat hangers in shapes of faces merged with elephant noses in different colours">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -46,7 +46,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/face-hanger-green.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green.jpg"
                     alt="green coat hanger in a shape of face merged with elephant nose">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -55,7 +55,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/face-hanger-green 2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/face-hanger-green 2.jpg"
                     alt="green elephant coat hanger from a different angle">
                 <figcaption>
                     <h2>Surrealistic hooks</h2>
@@ -64,7 +64,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/bombki.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bombki.jpg"
                     alt="pink glass christmas baubles">
                 <figcaption>
                     <h2>Christmas Baubles</h2>
@@ -73,7 +73,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/bag-print.jpg" alt="tote bag print">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print.jpg"
+                    alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
                     <p> Handmade bags with different prints on.
@@ -81,7 +82,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/bag-print-2.jpg" alt="tote bag print">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-2.jpg"
+                    alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
                     <p> Handmade bags with different prints on.
@@ -89,7 +91,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/bag-print-3.jpg" alt="tote bag print">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/bag-print-3.jpg"
+                    alt="tote bag print">
                 <figcaption>
                     <h2>Screen print on textile.</h2>
                     <p> Handmade bags with different prints on.
@@ -97,7 +100,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/painted-stool.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool.jpg"
                     alt="white stool with underwater scene painted on top of it">
                 <figcaption>
                     <h2>Flower table</h2>
@@ -106,7 +109,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/painted-stool-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/painted-stool-2.jpg"
                     alt="white stool with underwater scene painted on top of it from another angle">
                 <figcaption>
                     <h2>Flower table</h2>
@@ -115,37 +118,37 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/sundbyberg.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg.jpg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/sundbyberg-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/sundbyberg-2.jpg"
                     alt="abstract, ceramic prize made for sundbybergs commune">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/mushroom-hook-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-1.jpg"
                     alt="a blue coat hanger in shapes of mushrooms">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/mushroom-hook-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-2.jpg"
                     alt="close-up of a blue coat hanger in shapes of mushrooms">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/mushroom-hook-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-3.jpg"
                     alt="a red coat hanger in shapes of mushrooms">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/mushroom-hook-4.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/mushroom-hook-4.jpg"
                     alt="close-up of a red coat hanger in shapes of mushrooms">
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/pot-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-1.jpg"
                     alt="white, ceramic, plant pot from a side">
                 <figcaption>
                     <h2>White pot</h2>
@@ -154,7 +157,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/pot-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-2.jpg"
                     alt="a close-up of a white, ceramic, plant pot">
                 <figcaption>
                     <h2>White pot</h2>
@@ -163,7 +166,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/pot-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-3.jpg"
                     alt="white, ceramic, plant pot from above">
                 <figcaption>
                     <h2>White pot</h2>
@@ -171,7 +174,7 @@
                         <br> Material: ceramics and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./others gallery/pot-4.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/pot-4.jpg"
                     alt="white, ceramic, plant pot on a table with a plant in it">
                 <figcaption>
                     <h2>White pot</h2>
@@ -179,7 +182,16 @@
                         <br> Material: ceramics and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./others gallery/stool-1.JPEG"
+            <figure class="hover-img" tabindex="0" id="carousel-link-3"><img class="item"
+                    src="./others gallery/stool-1.JPEG" alt="red wooden stool, with spikes underneath">
+                <figcaption>
+                    <h2>Chaos</h2>
+                    <p>A stool inspired by chaos and the feelings of stress.
+                        <br> Material: Pinewood</p>
+                </figcaption>
+            </figure>
+
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-2.JPEG"
                     alt="red wooden stool, with spikes underneath">
                 <figcaption>
                     <h2>Chaos</h2>
@@ -188,16 +200,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./others gallery/stool-2.JPEG"
-                    alt="red wooden stool, with spikes underneath">
-                <figcaption>
-                    <h2>Chaos</h2>
-                    <p>A stool inspired by chaos and the feelings of stress.
-                        <br> Material: Pinewood</p>
-                </figcaption>
-            </figure>
-
-            <figure class="hover-img"><img class="item" src="./others gallery/stool-3.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./others gallery/stool-3.JPEG"
                     alt="red wooden stool, with spikes underneath, from underneath">
                 <figcaption>
                     <h2>Chaos</h2>
@@ -241,12 +244,12 @@ Handmade bags with different prints on.
 
         <footer>
             <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
-            <div class="tooltip-container"><i class="fas fa-phone"></i>
+            <button class="tooltip-container"><i class="fas fa-phone"></i>
                 <p class="tooltip-text">+46737193365</p>
-            </div>
-            <div class="tooltip-container"><i class="far fa-envelope"></i>
+            </button>
+            <button class="tooltip-container"><i class="far fa-envelope"></i>
                 <p class="tooltip-text">klakaz99@gmail.com</p>
-            </div>
+            </button>
             <p>©Julia Wos, 2021</p>
 
         </footer>
