--- a/paintings.html
+++ b/paintings.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <main class="painting-gallery">
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/landscape-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-1.jpg"
                     alt="big painting of colorful landscape">
                 <figcaption>
                     <h2>Björn Wessman inspired Landscape</h2>
@@ -38,7 +38,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/landscape-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/landscape-2.jpg"
                     alt="big painting of colorful landscape from distance">
                 <figcaption>
                     <h2>Björn Wessman inspired Landscape</h2>
@@ -48,7 +48,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/forest-landscape.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/forest-landscape.JPG"
                     alt="painting of a forest landscape">
                 <figcaption>
                     <h2>Landscape</h2>
@@ -57,7 +57,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/mirror-landscape-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mirror-landscape-2.jpg"
                     alt="a mirror landscape of the black beach in Iceland">
                 <figcaption>
                     <h2>Reflective landscape</h2>
@@ -66,7 +66,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/selfportrait-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait-1.jpg"
                     alt="colorful selfportrait">
                 <figcaption>
                     <h2>Selfportrait</h2>
@@ -75,7 +75,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/selfportrait-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/selfportrait-2.jpg"
                     alt="a close-up of a selfportrait">
                 <figcaption>
                     <h2>Selfportrait</h2>
@@ -84,7 +84,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/garden.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/garden.jpg"
                     alt="painting of a a colorful garden">
                 <figcaption>
                     <h2>Ogród (garden)</h2>
@@ -93,8 +93,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/mirror-landscape-1.jpg"
-                    alt="a mirror landscape with a river">
+            <figure class="hover-img" tabindex="0" id="carousel-link-4"><img class="item"
+                    src="./paintings-gallery/mirror-landscape-1.jpg" alt="a mirror landscape with a river">
                 <figcaption>
                     <h2>Reflective landscape</h2>
                     <p> Landscape painted on a blank surface to scratch within the paint
@@ -102,7 +102,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/mushrooms-sketch.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/mushrooms-sketch.jpg"
                     alt="sketch of mushrooms">
                 <figcaption>
                     <h2>Latest sketches</h2>
@@ -111,7 +111,7 @@
 
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/painting.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/painting.jpg"
                     alt="an abstract painting">
                 <figcaption>
                     <h2>Latest sketches</h2>
@@ -119,7 +119,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./paintings-gallery/another.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./paintings-gallery/another.jpg"
                     alt="painting of a landscape">
                 <figcaption>
                     <h2>Latest sketches</h2>
@@ -129,12 +129,12 @@
         </main>
         <footer>
             <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
-            <div class="tooltip-container"><i class="fas fa-phone"></i>
+            <button class="tooltip-container"><i class="fas fa-phone"></i>
                 <p class="tooltip-text">+46737193365</p>
-            </div>
-            <div class="tooltip-container"><i class="far fa-envelope"></i>
+            </button>
+            <button class="tooltip-container"><i class="far fa-envelope"></i>
                 <p class="tooltip-text">klakaz99@gmail.com</p>
-            </div>
+            </button>
             <p>©Julia Wos, 2021</p>
 
         </footer>
