--- a/projects.html
+++ b/projects.html
@@ -43,8 +43,8 @@
             class="paintings" />
           <p>click to see more paintings</p>
         </a>
-        <a href="./other.html"><img src="./other-logo.png" alt="picture of red wooden stool with spikes underneath"
-            class="other" />
+        <a href="./other.html"><img src="./main pictures/other-logo.png"
+            alt="picture of red wooden stool with spikes underneath" class="other" />
           <p>click to see other projects</p>
         </a>
       </div>
@@ -52,12 +52,12 @@
   </header>
   <footer>
     <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
-    <div class="tooltip-container"><i class="fas fa-phone"></i>
+    <button class="tooltip-container"><i class="fas fa-phone"></i>
       <p class="tooltip-text">+46737193365</p>
-    </div>
-    <div class="tooltip-container"><i class="far fa-envelope"></i>
+    </button>
+    <button class="tooltip-container"><i class="far fa-envelope"></i>
       <p class="tooltip-text">klakaz99@gmail.com</p>
-    </div>
+    </button>
     <p>©Julia Wos, 2021</p>
 
   </footer>
