--- a/sculptures.html
+++ b/sculptures.html
@@ -28,7 +28,7 @@
             </div>
         </nav>
         <div class="sculpture-gallery">
-            <figure class="hover-img"><img class="item" src="./tableware gallery/big-mushroom-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-1.jpg"
                     alt="A ceramic candle holder in a shape of a huge, human sized red mushroom">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -41,7 +41,7 @@
                         <br> Material: Clay and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./tableware gallery/big-mushroom-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/big-mushroom-2.jpg"
                     alt="a close-up of a ceramic candle holder in a shape of a huge, human sized red mushroom">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -54,7 +54,7 @@
                         <br> Material: Clay and glaze</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/head-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-1.jpg"
                     alt="a head sculptue from a side">
                 <figcaption>
                     <h2>A portrait of my classmate</h2>
@@ -62,7 +62,7 @@
                     <p> Material: Clay</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/head-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/head-2.jpg"
                     alt="a head sculpture from up front">
                 <figcaption>
                     <h2>A portrait of my classmate</h2>
@@ -70,15 +70,15 @@
                     <p> Material: Clay</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/organic-lamp-1.JPG"
-                    alt="an organic lamp made from dried orange slices">
+            <figure class="hover-img" tabindex="0" id="carousel-link-5"><img class="item"
+                    src="./sculptures gallery/organic-lamp-1.JPG" alt="an organic lamp made from dried orange slices">
                 <figcaption>
                     <h2>Organic lamp</h2>
                     <p>A esthetic lamp with focus on shadows</p>
                     <p>Material: Oranges and wire</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/organic-lamp-2.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/organic-lamp-2.JPG"
                     alt="close-up of an organic lamp made from dried orange slices">
                 <figcaption>
                     <h2>Organic lamp</h2>
@@ -86,7 +86,7 @@
                     <p>Material: Oranges and wire</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/candle-holder-4.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-4.JPEG"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
@@ -94,7 +94,7 @@
                     <p>Material: Plaster</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/candle-holder-1.JPEG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-1.JPEG"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
@@ -102,7 +102,7 @@
                     <p>Material: Plaster</p>
                 </figcaption>
             </figure>
-            <figure class="hover-img"><img class="item" src="./sculptures gallery/candle-holder-3.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./sculptures gallery/candle-holder-3.JPG"
                     alt="abstract candle holders with open mouths, hands and fingers on it">
                 <figcaption>
                     <h2>Kroppsljusstakar<br>(body candlesticks)</h2>
@@ -116,12 +116,12 @@
         </div>
         <footer>
             <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
-            <div class="tooltip-container"><i class="fas fa-phone"></i>
+            <button class="tooltip-container"><i class="fas fa-phone"></i>
                 <p class="tooltip-text">+46737193365</p>
-            </div>
-            <div class="tooltip-container"><i class="far fa-envelope"></i>
+            </button>
+            <button class="tooltip-container"><i class="far fa-envelope"></i>
                 <p class="tooltip-text">klakaz99@gmail.com</p>
-            </div>
+            </button>
             <p>©Julia Wos, 2021</p>
 
         </footer>
