--- a/tableware.html
+++ b/tableware.html
@@ -30,7 +30,7 @@
         </nav>
         <div class="tableware-gallery">
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/candle-holder.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/candle-holder.jpg"
                     alt="a volcano inspired, grey candle holder">
                 <figcaption>
                     <h2>Concrete candlestick</h2>
@@ -39,7 +39,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/bowls-4.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/bowls-4.JPG"
                     alt="a white ceramic bowl with a lid and some fruits in it">
                 <figcaption>
                     <h2>Organic bowls</h2>
@@ -49,7 +49,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/bowls-2.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/bowls-2.JPG"
                     alt="a brown ceramic bowl set on a wooden table, with some rowanberries next to it">
                 <figcaption>
                     <h2>Bowls and a vase</h2>
@@ -58,7 +58,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/bowls-3.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/bowls-3.JPG"
                     alt="a grey clay bowl and flower vase on a table">
                 <figcaption>
                     <h2>Bowls and a vase</h2>
@@ -67,7 +67,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/raku-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/raku-1.jpg"
                     alt="ceramic flower vase, candle holder and a bowl, made in japanese raku technique">
                 <figcaption>
                     <h2>Raku</h2>
@@ -78,7 +78,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/raku-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/raku-2.jpg"
                     alt="ceramic flower vase, candle holder and a bowl, made in japanese raku technique">
                 <figcaption>
                     <h2>Raku</h2>
@@ -89,7 +89,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coasters-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coasters-2.jpg"
                     alt="two ceramic coasters">
                 <figcaption>
                     <h2>Raku</h2>
@@ -100,7 +100,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coasters-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coasters-1.jpg"
                     alt="dark ceramic coasters, one with glass on it and glass water bottle next to it">
                 <figcaption>
                     <h2>Raku</h2>
@@ -111,7 +111,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coasters-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coasters-3.jpg"
                     alt="a close-up of a ceramic coaster with a water glass on it">
                 <figcaption>
                     <h2>Raku</h2>
@@ -123,7 +123,7 @@
             </figure>
 
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/sushi-set.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/sushi-set.JPG"
                     alt="a dark brown, shiny, ceramic sushi tableware set">
                 <figcaption>
                     <h2>Desert rose</h2>
@@ -133,7 +133,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/table-set-1.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/table-set-1.jpg"
                     alt="forest inspired table set, with a bowl, glass and a spoon">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -147,7 +147,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/table-set-2.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/table-set-2.jpg"
                     alt="forest inspired table set, with a bowl, glass and a spoon">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -162,7 +162,7 @@
             </figure>
 
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/table-set-3.jpg"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/table-set-3.jpg"
                     alt="forest inspired table set, with a bowl, glass and a spoon">
                 <figcaption>
                     <h2>Mushroom dinnerware</h2>
@@ -176,7 +176,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coffee-set-1.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coffee-set-1.JPG"
                     alt="a ceramic coffee set with a coffee being poured into it">
                 <figcaption>
                     <h2>Tea and coffee pot</h2>
@@ -187,7 +187,7 @@
             </figure>
 
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coffee-set-2.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coffee-set-2.JPG"
                     alt="a ceramic, blue coffe pot">
                 <figcaption>
                     <h2>Tea and coffee pot</h2>
@@ -197,7 +197,7 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/coffee-set-3.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/coffee-set-3.JPG"
                     alt="a ceramic, blue coffe pot with filter holder on top of it">
                 <figcaption>
                     <h2>Tea and coffee pot</h2>
@@ -209,7 +209,7 @@
 
 
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/glasses.JPG"
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/glasses.JPG"
                     alt="handblown pink glasses">
                 <figcaption>
                     <h2>Pippi Långstrump - Glasses</h2>
@@ -219,8 +219,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/set-1.JPG"
-                    alt="dark ceramic table set">
+            <figure class="hover-img" tabindex="0" id="carousel-link-2"><img class="item"
+                    src="./tableware gallery/set-1.JPG" alt="dark ceramic table set">
                 <figcaption>
                     <h2>Vinterservis (Winter dinnerware)</h2>
                     <p> A dinnerware inspired by the cold, ruff, stone like Scandinavian feeling with a contrast to the
@@ -230,7 +230,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/set-2.JPG" alt="Example image">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/set-2.JPG"
+                    alt="Example image">
                 <figcaption>
                     <h2>Vinterservis (Winter dinnerware)</h2>
                     <p> A dinnerware inspired by the cold, ruff, stone like Scandinavian feeling with a contrast to the
@@ -240,7 +241,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/set-3.JPG" alt="Example image">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/set-3.JPG"
+                    alt="Example image">
                 <figcaption>
                     <h2>Vinterservis (Winter dinnerware)</h2>
                     <p> A dinnerware inspired by the cold, ruff, stone like Scandinavian feeling with a contrast to the
@@ -250,7 +252,8 @@
                 </figcaption>
             </figure>
 
-            <figure class="hover-img"><img class="item" src="./tableware gallery/set-4.JPG" alt="Example image">
+            <figure class="hover-img" tabindex="0"><img class="item" src="./tableware gallery/set-4.JPG"
+                    alt="Example image">
                 <figcaption>
                     <h2>Vinterservis (Winter dinnerware)</h2>
                     <p> A dinnerware inspired by the cold, ruff, stone like Scandinavian feeling with a contrast to the
@@ -265,12 +268,12 @@
         </div>
         <footer>
             <a href="https://www.instagram.com/konstenattvarakk/" class="fab fa-instagram"></a>
-            <div class="tooltip-container"><i class="fas fa-phone"></i>
+            <button class="tooltip-container"><i class="fas fa-phone"></i>
                 <p class="tooltip-text">+46737193365</p>
-            </div>
-            <div class="tooltip-container"><i class="far fa-envelope"></i>
+            </button>
+            <button class="tooltip-container"><i class="far fa-envelope"></i>
                 <p class="tooltip-text">klakaz99@gmail.com</p>
-            </div>
+            </button>
             <p>©Julia Wos, 2021</p>
 
         </footer>
